feat: Render game.
Signed-off-by: Christoph Ungricht <christoph.ungricht@outlook.com>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
 
 <body>
-  <script src="main.js">
+  <div id="div-game-of-life">
+    <canvas id="canvas-game-of-life" width="800" height="800"></canvas>
+  </div>
+  <script src="game_of_life.js">
   </script>
 </body>
 
